# CUGBAPI

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
cugb_jwc_api/: __init__.py  api.py  cli.py  client.py  models.py  parser.py  repository.py  server.py  settings.py
tests/: test_api.py  test_parser.py  test_repository.py  test_settings.py
tests/fixtures/: list.html
