[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cugb-jwc-api"
version = "1.0.0"
description = "Read-only JSON API for CUGB JWC public notices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "CUGB JWC API contributors" }]
dependencies = []

[project.scripts]
cugb-jwc-api = "cugb_jwc_api.cli:main"

[tool.setuptools.packages.find]
include = ["cugb_jwc_api*"]
